src/antlr_files/grammarCParser.py
# Generated from /home/watson/OneDrive/2023-2024/Compilers/Project/Compilers/grammar/grammarC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class grammarCParser ( Parser ):

    grammarFileName = "grammarC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'#ifndef'", "'#endif'", "'#include'", 
                     "'<stdio.h>'", "'('", "'*'", "')'", "'{'", "'}'", "','", 
                     "'break'", "'continue'", "'typedef'", "'#define'", 
                     "'-'", "'if'", "'else'", "'for'", "'while'", "'switch'", 
                     "'case'", "':'", "'default'", "'enum'", "'printf'", 
                     "'scanf'", "'const'", "'int'", "'char'", "'float'", 
                     "'void'", "'struct'", "'union'", "'return'", "'='", 
                     "'->'", "'.'", "'++'", "'--'", "'&'", "'+'", "'~'", 
                     "'!'", "'/'", "'%'", "'>>'", "'<<'", "'<'", "'>'", 
                     "'>='", "'<='", "'=='", "'!='", "'^'", "'|'", "'&&'", 
                     "'||'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "COMMENT", "IDENTIFIER", "INT", "FLOAT", 
                      "CHAR", "STRING", "WS" ]

    RULE_start_ = 0
    RULE_code = 1
    RULE_include_guard = 2
    RULE_include = 3
    RULE_function_signature = 4
    RULE_function = 5
    RULE_line = 6
    RULE_parameters = 7
    RULE_parameter = 8
    RULE_parameter_call = 9
    RULE_block_line = 10
    RULE_block_code = 11
    RULE_typedef = 12
    RULE_define = 13
    RULE_if = 14
    RULE_for = 15
    RULE_while = 16
    RULE_anonymous_scope = 17
    RULE_switch = 18
    RULE_case = 19
    RULE_default = 20
    RULE_enum = 21
    RULE_printscanf = 22
    RULE_type = 23
    RULE_return = 24
    RULE_structunion = 25
    RULE_functionPtrDeclaration = 26
    RULE_function_ptr_2 = 27
    RULE_function_ptr_params = 28
    RULE_parameter_calls = 29
    RULE_declaration = 30
    RULE_assignment = 31
    RULE_conversion = 32
    RULE_initialize_list = 33
    RULE_expr = 34
    RULE_array = 35
    RULE_literal = 36

    ruleNames =  [ "start_", "code", "include_guard", "include", "function_signature", 
                   "function", "line", "parameters", "parameter", "parameter_call", 
                   "block_line", "block_code", "typedef", "define", "if", 
                   "for", "while", "anonymous_scope", "switch", "case", 
                   "default", "enum", "printscanf", "type", "return", "structunion", 
                   "functionPtrDeclaration", "function_ptr_2", "function_ptr_params", 
                   "parameter_calls", "declaration", "assignment", "conversion", 
                   "initialize_list", "expr", "array", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    COMMENT=61
    IDENTIFIER=62
    INT=63
    FLOAT=64
    CHAR=65
    STRING=66
    WS=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Start_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def code(self):
            return self.getTypedRuleContext(grammarCParser.CodeContext,0)


        def EOF(self):
            return self.getToken(grammarCParser.EOF, 0)

        def getRuleIndex(self):
            return grammarCParser.RULE_start_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_" ):
                listener.enterStart_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_" ):
                listener.exitStart_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_" ):
                return visitor.visitStart_(self)
            else:
                return visitor.visitChildren(self)




    def start_(self):

        localctx = grammarCParser.Start_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.code()
            self.state = 75
            self.match(grammarCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarCParser.FunctionContext)
            else:
                return self.getTypedRuleContext(grammarCParser.FunctionContext,i)


        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarCParser.LineContext)
            else:
                return self.getTypedRuleContext(grammarCParser.LineContext,i)


        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarCParser.IncludeContext)
            else:
                return self.getTypedRuleContext(grammarCParser.IncludeContext,i)


        def define(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarCParser.DefineContext)
            else:
                return self.getTypedRuleContext(grammarCParser.DefineContext,i)


        def include_guard(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarCParser.Include_guardContext)
            else:
                return self.getTypedRuleContext(grammarCParser.Include_guardContext,i)


        def getRuleIndex(self):
            return grammarCParser.RULE_code

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode" ):
                listener.enterCode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode" ):
                listener.exitCode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode" ):
                return visitor.visitCode(self)
            else:
                return visitor.visitChildren(self)




    def code(self):

        localctx = grammarCParser.CodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_code)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -4611651349484813612) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 7) != 0):
                self.state = 87
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 77
                    self.function()
                    pass

                elif la_ == 2:
                    self.state = 78
                    self.line()
                    self.state = 80 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 79
                            self.match(grammarCParser.T__0)

                        else:
                            raise NoViableAltException(self)
                        self.state = 82 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                    pass

                elif la_ == 3:
                    self.state = 84
                    self.include()
                    pass

                elif la_ == 4:
                    self.state = 85
                    self.define()
                    pass

                elif la_ == 5:
                    self.state = 86
                    self.include_guard()
                    pass


                self.state = 92
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 89
                        self.match(grammarCParser.T__0) 
                    self.state = 94
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 100
                self.match(grammarCParser.T__0)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Include_guardContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(grammarCParser.IDENTIFIER, 0)

        def code(self):
            return self.getTypedRuleContext(grammarCParser.CodeContext,0)


        def getRuleIndex(self):
            return grammarCParser.RULE_include_guard

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude_guard" ):
                listener.enterInclude_guard(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude_guard" ):
                listener.exitInclude_guard(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude_guard" ):
                return visitor.visitInclude_guard(self)
            else:
                return visitor.visitChildren(self)




    def include_guard(self):

        localctx = grammarCParser.Include_guardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_include_guard)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(grammarCParser.T__1)
            self.state = 107
            self.match(grammarCParser.IDENTIFIER)
            self.state = 108
            self.code()
            self.state = 109
            self.match(grammarCParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(grammarCParser.STRING, 0)

        def getRuleIndex(self):
            return grammarCParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = grammarCParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_include)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(grammarCParser.T__3)
            self.state = 112
            _la = self._input.LA(1)
            if not(_la==5 or _la==66):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_signatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_signature(self):
            return self.getTypedRuleContext(grammarCParser.Function_signatureContext,0)


        def function_ptr_params(self):
            return self.getTypedRuleContext(grammarCParser.Function_ptr_paramsContext,0)


        def IDENTIFIER(self):
            return self.getToken(grammarCParser.IDENTIFIER, 0)

        def parameters(self):
            return self.getTypedRuleContext(grammarCParser.ParametersContext,0)


        def getRuleIndex(self):
            return grammarCParser.RULE_function_signature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_signature" ):
                listener.enterFunction_signature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_signature" ):
                listener.exitFunction_signature(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_signature" ):
                return visitor.visitFunction_signature(self)
            else:
                return visitor.visitChildren(self)




    def function_signature(self):

        localctx = grammarCParser.Function_signatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_signature)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(grammarCParser.T__5)
                self.state = 115
                self.match(grammarCParser.T__6)
                self.state = 116
                self.function_signature()
                self.state = 117
                self.match(grammarCParser.T__7)
                self.state = 118
                self.match(grammarCParser.T__5)
                self.state = 119
                self.function_ptr_params()
                self.state = 120
                self.match(grammarCParser.T__7)
                pass
            elif token in [62]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(grammarCParser.IDENTIFIER)
                self.state = 123
                self.match(grammarCParser.T__5)
                self.state = 124
                self.parameters()
                self.state = 125
                self.match(grammarCParser.T__7)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(grammarCParser.TypeContext,0)


        def function_signature(self):
            return self.getTypedRuleContext(grammarCParser.Function_signatureContext,0)


        def block_code(self):
            return self.getTypedRuleContext(grammarCParser.Block_codeContext,0)


        def getRuleIndex(self):
            return grammarCParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = grammarCParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.type_()
            self.state = 130
            self.function_signature()
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 131
                self.match(grammarCParser.T__8)
                self.state = 132
                self.block_code()
                self.state = 133
                self.match(grammarCParser.T__9)


            self.state = 140
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 137
                    self.match(grammarCParser.T__0) 
                self.state = 142
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(grammarCParser.DeclarationContext,0)


        def expr(self):
            return self.getTypedRuleContext(grammarCParser.ExprContext,0)


        def assignment(self):
            return self.getTypedRuleContext(grammarCParser.AssignmentContext,0)


        def typedef(self):
            return self.getTypedRuleContext(grammarCParser.TypedefContext,0)


        def enum(self):
            return self.getTypedRuleContext(grammarCParser.EnumContext,0)


        def structunion(self):
            return self.getTypedRuleContext(grammarCParser.StructunionContext,0)


        def getRuleIndex(self):
            return grammarCParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = grammarCParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 143
                self.declaration()
                pass

            elif la_ == 2:
                self.state = 144
                self.expr(0)
                pass

            elif la_ == 3:
                self.state = 145
                self.assignment()
                pass

            elif la_ == 4:
                self.state = 146
                self.typedef()
                pass

            elif la_ == 5:
                self.state = 147
                self.enum()
                pass

            elif la_ == 6:
                self.state = 148
                self.structunion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarCParser.ParameterContext)
            else:
                return self.getTypedRuleContext(grammarCParser.ParameterContext,i)


        def getRuleIndex(self):
            return grammarCParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = grammarCParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4611686052552245248) != 0):
                self.state = 156
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 151
                        self.parameter()
                        self.state = 152
                        self.match(grammarCParser.T__10) 
                    self.state = 158
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                self.state = 159
                self.parameter()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(grammarCParser.TypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(grammarCParser.IDENTIFIER, 0)

        def array(self):
            return self.getTypedRuleContext(grammarCParser.ArrayContext,0)


        def functionPtrDeclaration(self):
            return self.getTypedRuleContext(grammarCParser.FunctionPtrDeclarationContext,0)


        def getRuleIndex(self):
            return grammarCParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = grammarCParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.type_()
                self.state = 163
                self.match(grammarCParser.IDENTIFIER)
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==59:
                    self.state = 164
                    self.array()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.functionPtrDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(grammarCParser.ExprContext,0)


        def getRuleIndex(self):
            return grammarCParser.RULE_parameter_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_call" ):
                listener.enterParameter_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_call" ):
                listener.exitParameter_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_call" ):
                return visitor.visitParameter_call(self)
            else:
                return visitor.visitChildren(self)




    def parameter_call(self):

        localctx = grammarCParser.Parameter_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_lineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self):
            return self.getTypedRuleContext(grammarCParser.LineContext,0)


        def printscanf(self):
            return self.getTypedRuleContext(grammarCParser.PrintscanfContext,0)


        def return_(self):
            return self.getTypedRuleContext(grammarCParser.ReturnContext,0)


        def getRuleIndex(self):
            return grammarCParser.RULE_block_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_line" ):
                listener.enterBlock_line(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_line" ):
                listener.exitBlock_line(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_line" ):
                return visitor.visitBlock_line(self)
            else:
                return visitor.visitChildren(self)




    def block_line(self):

        localctx = grammarCParser.Block_lineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 172
                self.line()
                pass

            elif la_ == 2:
                self.state = 173
                self.printscanf()
                pass

            elif la_ == 3:
                self.state = 174
                self.match(grammarCParser.T__11)
                pass

            elif la_ == 4:
                self.state = 175
                self.match(grammarCParser.T__12)
                pass

            elif la_ == 5:
                self.state = 176
                self.return_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_codeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarCParser.Block_lineContext)
            else:
                return self.getTypedRuleContext(grammarCParser.Block_lineContext,i)


        def if_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarCParser.IfContext)
            else:
                return self.getTypedRuleContext(grammarCParser.IfContext,i)


        def for_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarCParser.ForContext)
            else:
                return self.getTypedRuleContext(grammarCParser.ForContext,i)


        def while_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarCParser.WhileContext)
            else:
                return self.getTypedRuleContext(grammarCParser.WhileContext,i)


        def anonymous_scope(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarCParser.Anonymous_scopeContext)
            else:
                return self.getTypedRuleContext(grammarCParser.Anonymous_scopeContext,i)


        def switch(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarCParser.SwitchContext)
            else:
                return self.getTypedRuleContext(grammarCParser.SwitchContext,i)


        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarCParser.IncludeContext)
            else:
                return self.getTypedRuleContext(grammarCParser.IncludeContext,i)


        def define(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarCParser.DefineContext)
            else:
                return self.getTypedRuleContext(grammarCParser.DefineContext,i)


        def getRuleIndex(self):
            return grammarCParser.RULE_block_code

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_code" ):
                listener.enterBlock_code(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_code" ):
                listener.exitBlock_code(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_code" ):
                return visitor.visitBlock_code(self)
            else:
                return visitor.visitChildren(self)




    def block_code(self):
